# clap-verbosity-flag

./: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  release.toml
.github/: settings.yml
.github/workflows/: ci.yml  codegen.yml  pre-commit.yml  rust-next.yml
examples/: default_level.rs  example.rs  example_tracing.rs  log.rs  tracing.rs
src/: lib.rs  log.rs  tracing.rs
