[package]
name = "clap-verbosity-flag"
version = "1.0.1"
description = "Easily add a `--verbose` flag to CLIs using Structopt"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-clique/clap-verbosity-flag"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/clap-verbosity-flag/compare/{{tag_name}}...HEAD", exactly=1},
]

[badges]
codecov = { repository = "rust-cli/clap-verbosity-flag" }

[dependencies]
log = "0.4.1"
clap = { version = "3.0", default-features = false, features = ["std", "derive"] }

[dev-dependencies]
env_logger = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1.3"
